Fix text inputs partially invisible in FF

--- a/grails-app/assets/stylesheets/elurikkus-common.css
+++ b/grails-app/assets/stylesheets/elurikkus-common.css
@@ -168,7 +168,7 @@ input[type="text"] {
     padding: 1px 0;
 }
 
-input, select, button {
+select, button {
     height: 30px;
 }
 
